crates/shipper-cli/tests/snapshots/e2e_expanded__help_ci.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stdout)
---
Print a ready-to-paste CI configuration snippet for a supported platform.

The snippet wires up the plan → preflight → publish sequence, uploads the
`.shipper/` evidence packet as a build artifact, and shows where the
registry token (or Trusted Publishing step) belongs. It is printed to
stdout and reads nothing from your workspace, so it works from any
directory.

EXAMPLES:
    # Write a GitHub Actions release job to a workflow file:
    shipper ci github-actions > .github/workflows/release.yml

    # Preview the GitLab CI equivalent:
    shipper ci gitlab


Usage: shipper-cli ci [OPTIONS] <COMMAND>

Commands:
  github-actions  Print GitHub Actions workflow snippet
  gitlab          Print GitLab CI workflow snippet
  circleci        Print CircleCI workflow snippet
  azure-devops    Print Azure DevOps pipeline snippet
  help            Print this message or the help of the given subcommand(s)

Options:
      --config <CONFIG>
          Path to a custom configuration file (.shipper.toml)

      --manifest-path <MANIFEST_PATH>
          Path to the workspace Cargo.toml
          
          [default: Cargo.toml]

      --registry <REGISTRY>
          Cargo registry name (default: crates-io)

      --api-base <API_BASE>
          Registry API base URL (default: <https://crates.io>)

      --package <PACKAGES>
          Restrict to specific packages (repeatable). If omitted, publishes all publishable workspace members

      --state-dir <STATE_DIR>
          Directory for shipper state and receipts (default: .shipper)

      --format <FORMAT>
          Output format: text (default) or json
          
          [default: text]
          [possible values: text, json]

      --verbose
          Show detailed dependency analysis for plan command

  -q, --quiet
          Suppress informational output

  -h, --help
          Print help (see a summary with '-h')
